v6.1

  * added #:equiv option to test-equal

  * added default-equiv


v6.0

  * Added an enumerator for patterns. For example, here's how to get
    the first 100 untyped LC terms (over 3 variables) and the 10^10000-th:

        #lang racket
        (require redex)
        
        (define-language L
          (e (e e) x (λ (x) e))
          (x a b c))
        
        (for/list ([i (in-range 100)])
          (generate-term L e #:i-th i))

        (generate-term L e #:i-th (expt 10 10000))

    Thanks to Max New for the enumerator.

  * More patterns that match no terms are now syntax errors, e.g.:
    (any_1 ..._!_1 any_2 ..._!_1 (any_1 any_2) ...)
 
  * added where-make-prefix-pict and where-combine parameters.

  * added #:keep-going to redex-check

  * added #:satisfying to redex-check

  * added #:reduce argument to traces

  * DrRacket's Check Syntax now works better with Redex pattern variables

  * The pattern _ now matches anything but does not bind a variable

  * bug fixes

v5.3.4

  * adjusted define-union-language to allow the unioned languages to
    have overlapping non-terminals; in that case the productions are
    combined

  * Adjust check-metafunction and check-reduction-relation so that
    they skip over randomly generated terms that don't match the
    contract spec (or #:domain spec). This means that when there is a
    case in the metafunction (or reduction-relation) whose nominal
    pattern is more general than the contract would allow, that those
    terms are discarded instead of used as inputs to the predicate.

  * Added the #:pre keyword to define-metafunction. It allows
    contracts that have to relate different arguments to a
    metafunction.

  * Fixed the way random generation for define-judgment-form works so
    that it properly handles metafunctions (i.e., it properly takes
    into account that previous patterns in a metafunction must not
    match when generating a particular clause)


v5.3.3

No changes

v5.3.2
